@@ -19,7 +19,6 @@ import opennlp.tools.stemmer.Stemmer;
 import opennlp.tools.stemmer.snowball.SnowballStemmer;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -52,7 +51,7 @@ public class OpenNlpTokenizer implements Tokenizer {
 
     @Override
     public Iterable<Token> tokenize(String input, Language language, StemMode stemMode, boolean removeAccents) {
-        if (input.isEmpty()) return Collections.emptyList();
+        if (input.isEmpty()) return List.of();
         Stemmer stemmer = stemmerFor(language, stemMode);
         if (stemmer == null) return simpleTokenizer.tokenize(input, language, stemMode, removeAccents);
 
